# scope_guard

./: CMakeLists.txt
include/scope_guard/: scope_guard.hpp
tests/: CMakeLists.txt  scope_guard_tests.cpp
